Fix text alignment on petDetailsNotFound paragraph

--- a/public/index.css
+++ b/public/index.css
@@ -75,6 +75,10 @@
   display: block;
 }
 
+.page p.not-found {
+  text-align: center;
+}
+
 .pet-detail {
   display: flex;
   width: 100%;
@@ -131,7 +135,7 @@ body {
 
 * {
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .pet h3 {
